# 2DCPhysicEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
physic_engine/: CMakeLists.txt  collision.c  collision.h  force.c  force.h  geometry.c  geometry.h  physic_object.c  physic_object.h  vector.c  vector.h  world.c  world.h
